--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.cyc2018.xyz/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.cyc2018.xyz/">
       <div class="xe-comment-entry">
         <a class="xe-user-img">
-          <img data-src="http://www.cyc2018.xyz/favicon.ico" class="lozad img-circle" width="40">
+          <img data-src="http://www.cyc2018.xyz/logo.png" class="lozad img-circle" width="40">
         </a>
         <div class="xe-comment">
           <a href="#" class="xe-user-name overflowClip_1">
